<resources>
    <string name="app_name">My Application</string>
    <string name="protegt">ProteGT</string>
    <string name="bienvenido_a">Bienvenido a</string>
    <string name="empecemos">Empecemos</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="reg_strate">Regístrate</string>
    <string name="nada">nada?</string>
    <string name="inicio_de_sesi_n">Inicio de sesión</string>
    <string name="nombre">Nombre</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="contrase_as_no_coinciden">Contraseñas no coinciden</string>
    <string name="activar_el_registro_y_las_notificaciones_de_exposici_n_del_covid_19">Activa el registro y las \nnotificaciones de exposición del COVID-19</string>
    <string name="para_identificar_si_est_s_en_riesgo_de_infecci_n_y_poder_avisarte_debes_habilitar_estas_opciones">Para identificar si estás en riesgo de infección y poder avisarte, debes habilitar estas opciones.</string>
    <string name="en_cualquier_momento_podr_s_deshabilitar_estas_opciones">En cualquier momento podrás deshabilitarlas</string>
    <string name="protegt_solo_te_mandara_notificaciones_para_tu_segurida_no_se_compartiran_datos_persolanes_ni_de_localizaci_n">ProteGT solo te mandara notificaciones para tu seguridad. No se compartiran datos personales ni de localización.</string>
    <string name="activar">Activar</string>
    <string name="no_deseo_activarlo_ahora">No deseo activarlo ahora</string>
    <string name="nuevo_usuario">Nuevo Usuario</string>
    <string name="todo">TODO</string>
    <string name="title_activity_covid_map">Map</string>
    <string name="Usar" />
    <string name="usar" />
</resources>